--- a/sidemenu.storyboard
+++ b/sidemenu.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -4499,7 +4499,7 @@
                                                                             <rect key="frame" x="0.0" y="0.0" width="69" height="27"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10% OFF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZY-xo-y1P">
-                                                                                    <rect key="frame" x="11.666666666666664" y="5" width="46.000000000000007" height="17"/>
+                                                                                    <rect key="frame" x="11.666666666666664" y="5" width="46" height="17"/>
                                                                                     <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
@@ -4689,7 +4689,7 @@
                                         <rect key="frame" x="0.0" y="57.666666666666686" width="393" height="701.33333333333326"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data Found" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34h-pT-Rrn">
-                                                <rect key="frame" x="122.66666666666667" y="336.66666666666663" width="147.66666666666657" height="28"/>
+                                                <rect key="frame" x="122.66666666666667" y="336.66666666666663" width="147.66666666666663" height="28"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -5784,11 +5784,11 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5dn-jk-a5b">
                                         <rect key="frame" x="0.0" y="40" width="393" height="283"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="83" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="USS-aV-b3l">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="83" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="USS-aV-b3l">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="283"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VideoCommentTableViewCell" rowHeight="83" id="bMV-PT-5sQ" customClass="VideoCommentTableViewCell" customModule="Bazaar_Ghar" customModuleProvider="target">
+                                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VideoCommentTableViewCell" rowHeight="83" id="bMV-PT-5sQ" customClass="VideoCommentTableViewCell" customModule="Bazaar_Ghar" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="50" width="393" height="83"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bMV-PT-5sQ" id="tH1-F8-TPQ">
@@ -5862,8 +5862,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GMU-Wl-DAU">
                                         <rect key="frame" x="0.0" y="323" width="393" height="97"/>
                                         <subviews>
-                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ozb-ay-VxB">
-                                                <rect key="frame" x="30" y="25.666666666666629" width="240" height="46"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ozb-ay-VxB">
+                                                <rect key="frame" x="28" y="25.666666666666629" width="290" height="46"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BRA-HI-TIh">
                                                         <rect key="frame" x="16" y="13.666666666666664" width="20" height="19"/>
@@ -5874,7 +5874,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Write something" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WPh-Cj-Zr6">
-                                                        <rect key="frame" x="46" y="0.33333333333337123" width="186" height="45"/>
+                                                        <rect key="frame" x="46" y="0.33333333333337123" width="236" height="45"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="45" id="Dks-a0-QQJ"/>
@@ -5894,7 +5894,7 @@
                                                     <constraint firstItem="BRA-HI-TIh" firstAttribute="centerY" secondItem="Ozb-ay-VxB" secondAttribute="centerY" id="9W9-vX-R0J"/>
                                                     <constraint firstItem="WPh-Cj-Zr6" firstAttribute="centerY" secondItem="BRA-HI-TIh" secondAttribute="centerY" id="9ku-DR-wy4"/>
                                                     <constraint firstAttribute="trailing" secondItem="WPh-Cj-Zr6" secondAttribute="trailing" constant="8" id="Eko-zc-5LC"/>
-                                                    <constraint firstAttribute="width" constant="240" id="ShK-Mp-hMA"/>
+                                                    <constraint firstAttribute="width" constant="290" id="ShK-Mp-hMA"/>
                                                     <constraint firstItem="WPh-Cj-Zr6" firstAttribute="leading" secondItem="BRA-HI-TIh" secondAttribute="trailing" constant="10" id="aYl-sv-93U"/>
                                                     <constraint firstItem="BRA-HI-TIh" firstAttribute="leading" secondItem="Ozb-ay-VxB" secondAttribute="leading" constant="16" id="bfJ-bJ-r2Q"/>
                                                     <constraint firstAttribute="height" constant="46" id="inn-gK-8If"/>
@@ -5905,24 +5905,26 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5k-oN-F8X">
-                                                <rect key="frame" x="290" y="26.666666666666629" width="93" height="44"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5k-oN-F8X">
+                                                <rect key="frame" x="333" y="23.666666666666629" width="50" height="50"/>
                                                 <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="44" id="ZMM-3a-nCX"/>
-                                                    <constraint firstAttribute="width" constant="93" id="jfC-Fh-X7X"/>
+                                                    <constraint firstAttribute="height" constant="50" id="ZMM-3a-nCX"/>
+                                                    <constraint firstAttribute="width" constant="50" id="jfC-Fh-X7X"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Buy">
+                                                <state key="normal" image="paperplane.fill" catalog="system">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="22"/>
+                                                        <real key="value" value="25"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="sendButtonAction:" destination="l5K-wU-e7Z" eventType="touchUpInside" id="GSg-ap-sdE"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -5931,7 +5933,7 @@
                                             <constraint firstAttribute="trailing" secondItem="t5k-oN-F8X" secondAttribute="trailing" constant="10" id="5yF-fY-AFO"/>
                                             <constraint firstAttribute="height" constant="97" id="FUJ-OM-Dpb"/>
                                             <constraint firstItem="t5k-oN-F8X" firstAttribute="centerY" secondItem="GMU-Wl-DAU" secondAttribute="centerY" id="RL7-mu-cqr"/>
-                                            <constraint firstItem="t5k-oN-F8X" firstAttribute="leading" secondItem="Ozb-ay-VxB" secondAttribute="trailing" constant="20" id="uI2-T0-yiU"/>
+                                            <constraint firstItem="t5k-oN-F8X" firstAttribute="leading" secondItem="Ozb-ay-VxB" secondAttribute="trailing" constant="15" id="uI2-T0-yiU"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -5986,6 +5988,8 @@
                     <navigationItem key="navigationItem" id="jZ7-Tk-gwH"/>
                     <connections>
                         <outlet property="commentTblV" destination="USS-aV-b3l" id="Ki1-Ar-QBB"/>
+                        <outlet property="sendButton" destination="t5k-oN-F8X" id="UKQ-lc-PFk"/>
+                        <outlet property="sendTextFeild" destination="WPh-Cj-Zr6" id="uGb-fW-XWB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6h7-8n-ZCy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -5993,6 +5997,14 @@
             <point key="canvasLocation" x="-777.86259541984725" y="-1127.4647887323945"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Ggz-iR-EBx">
+            <size key="intrinsicContentSize" width="120" height="20"/>
+        </designable>
+        <designable name="eJU-ki-le9">
+            <size key="intrinsicContentSize" width="-1" height="65"/>
+        </designable>
+    </designables>
     <resources>
         <image name="1 " width="428" height="717"/>
         <image name="17" width="225" height="225"/>
@@ -6029,6 +6041,7 @@
         <image name="multiply.circle" catalog="system" width="128" height="123"/>
         <image name="online-shopping" width="19" height="18"/>
         <image name="orderplace" width="140" height="140"/>
+        <image name="paperplane.fill" catalog="system" width="128" height="119"/>
         <image name="radio-button-svgrepo-com" width="800" height="800"/>
         <image name="receipt" width="15" height="18"/>
         <image name="return_policy" width="24" height="24"/>
